--- a/templates/storyteller notebook.ipynb
+++ b/templates/storyteller notebook.ipynb
@@ -36,7 +36,7 @@
     "# AI Window Size - Number of moves the AI remembers\n",
     "AI_WINDOW_SIZE = 20\n",
     "\n",
-    "template = \"\"\"\n",
+    "system_template = \"\"\"\n",
     "You are a helpful bot named Bob.\n",
     "\n",
     "Current conversation:\n",
@@ -45,7 +45,7 @@
     "AI Assistant:\n",
     "\"\"\"\n",
     "\n",
-    "system_message_prompt = SystemMessagePromptTemplate.from_template(template)\n",
+    "system_message_prompt = SystemMessagePromptTemplate.from_template(system_template)\n",
     "\n",
     "human_template=\"{input}\"\n",
     "human_message_prompt = HumanMessagePromptTemplate.from_template(human_template)\n",
@@ -121,7 +121,7 @@
     "\n",
     "langchain.chains.conversation.base.ConversationChain\n",
     "\n",
-    "class langchain.chains.conversation.base.ConversationChain[source]\n",
+    "class langchain.chains.conversation.base.ConversationChain\n",
     "\n",
     "    Bases: LLMChain\n",
     "\n",
@@ -212,7 +212,7 @@
    "source": [
     "langchain.memory.buffer_window.ConversationBufferWindowMemory\n",
     "\n",
-    "class langchain.memory.buffer_window.ConversationBufferWindowMemory[source]\n",
+    "class langchain.memory.buffer_window.ConversationBufferWindowMemory\n",
     "\n",
     "    Bases: BaseChatMemory\n",
     "\n",
@@ -354,7 +354,7 @@
    "source": [
     "langchain.chat_models.openai.ChatOpenAI\n",
     "\n",
-    "class langchain.chat_models.openai.ChatOpenAI[source]\n",
+    "class langchain.chat_models.openai.ChatOpenAI\n",
     "\n",
     "    Bases: BaseChatModel\n",
     "\n",
@@ -554,7 +554,7 @@
    "source": [
     "langchain.prompts.chat.ChatPromptTemplate\n",
     "\n",
-    "class langchain.prompts.chat.ChatPromptTemplate[source]\n",
+    "class langchain.prompts.chat.ChatPromptTemplate\n",
     "\n",
     "    Bases: BaseChatPromptTemplate\n",
     "\n",
@@ -641,181 +641,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "langchain.prompts.chat.SystemMessagePromptTemplate\n",
-    "\n",
-    "class langchain.prompts.chat.SystemMessagePromptTemplate[source]\n",
-    "\n",
-    "    Bases: BaseStringMessagePromptTemplate\n",
-    "\n",
-    "    System message prompt template. This is a message that is not sent to the user.\n",
-    "\n",
-    "    Create a new model by parsing and validating input data from keyword arguments.\n",
-    "\n",
-    "    Raises ValidationError if the input data cannot be parsed to form a valid model.\n",
-    "\n",
-    "    param additional_kwargs: dict [Optional]\n",
-    "\n",
-    "        Additional keyword arguments to pass to the prompt template.\n",
-    "\n",
-    "    param prompt: langchain.prompts.base.StringPromptTemplate [Required]\n",
-    "\n",
-    "        String prompt template.\n",
-    "\n",
-    "    classmethod construct(_fields_set: Optional[SetStr] = None, **values: Any) → Model\n",
-    "\n",
-    "        Creates a new model setting __dict__ and __fields_set__ from trusted or pre-validated data. Default values are respected, but no other validation is performed. Behaves as if Config.extra = ‘allow’ was set since it adds all passed values\n",
-    "\n",
-    "    copy(*, include: Optional[Union[AbstractSetIntStr, MappingIntStrAny]] = None, exclude: Optional[Union[AbstractSetIntStr, MappingIntStrAny]] = None, update: Optional[DictStrAny] = None, deep: bool = False) → Model\n",
-    "\n",
-    "        Duplicate a model, optionally choose which fields to include, exclude and change.\n",
-    "\n",
-    "        Parameters\n",
-    "\n",
-    "                include – fields to include in new model\n",
-    "\n",
-    "                exclude – fields to exclude from new model, as with values this takes precedence over include\n",
-    "\n",
-    "                update – values to change/add in the new model. Note: the data is not validated before creating the new model: you should trust this data\n",
-    "\n",
-    "                deep – set to True to make a deep copy of the model\n",
-    "\n",
-    "        Returns\n",
-    "\n",
-    "            new model instance\n",
-    "\n",
-    "    dict(*, include: Optional[Union[AbstractSetIntStr, MappingIntStrAny]] = None, exclude: Optional[Union[AbstractSetIntStr, MappingIntStrAny]] = None, by_alias: bool = False, skip_defaults: Optional[bool] = None, exclude_unset: bool = False, exclude_defaults: bool = False, exclude_none: bool = False) → DictStrAny\n",
-    "\n",
-    "        Generate a dictionary representation of the model, optionally specifying which fields to include or exclude.\n",
-    "\n",
-    "    format(**kwargs: Any) → BaseMessage[source]\n",
-    "\n",
-    "        Format the prompt template.\n",
-    "\n",
-    "        Parameters\n",
-    "\n",
-    "            **kwargs – Keyword arguments to use for formatting.\n",
-    "        Returns\n",
-    "\n",
-    "            Formatted message.\n",
-    "\n",
-    "    format_messages(**kwargs: Any) → List[BaseMessage]\n",
-    "\n",
-    "        Format messages from kwargs.\n",
-    "\n",
-    "        Parameters\n",
-    "\n",
-    "            **kwargs – Keyword arguments to use for formatting.\n",
-    "        Returns\n",
-    "\n",
-    "            List of BaseMessages.\n",
-    "\n",
-    "    classmethod from_orm(obj: Any) → Model\n",
-    "\n",
-    "    classmethod from_template(template: str, template_format: str = 'f-string', **kwargs: Any) → MessagePromptTemplateT\n",
-    "\n",
-    "        Create a class from a string template.\n",
-    "\n",
-    "        Parameters\n",
-    "\n",
-    "                template – a template.\n",
-    "\n",
-    "                template_format – format of the template.\n",
-    "\n",
-    "                **kwargs – keyword arguments to pass to the constructor.\n",
-    "\n",
-    "        Returns\n",
-    "\n",
-    "            A new instance of this class.\n",
-    "\n",
-    "    classmethod from_template_file(template_file: Union[str, Path], input_variables: List[str], **kwargs: Any) → MessagePromptTemplateT\n",
-    "\n",
-    "        Create a class from a template file.\n",
-    "\n",
-    "        Parameters\n",
-    "\n",
-    "                template_file – path to a template file. String or Path.\n",
-    "\n",
-    "                input_variables – list of input variables.\n",
-    "\n",
-    "                **kwargs – keyword arguments to pass to the constructor.\n",
-    "\n",
-    "        Returns\n",
-    "\n",
-    "            A new instance of this class.\n",
-    "\n",
-    "    classmethod get_lc_namespace() → List[str]\n",
-    "\n",
-    "        Get the namespace of the langchain object.\n",
-    "\n",
-    "        For example, if the class is langchain.llms.openai.OpenAI, then the namespace is [“langchain”, “llms”, “openai”]\n",
-    "\n",
-    "    classmethod is_lc_serializable() → bool\n",
-    "\n",
-    "        Return whether or not the class is serializable.\n",
-    "\n",
-    "    json(*, include: Optional[Union[AbstractSetIntStr, MappingIntStrAny]] = None, exclude: Optional[Union[AbstractSetIntStr, MappingIntStrAny]] = None, by_alias: bool = False, skip_defaults: Optional[bool] = None, exclude_unset: bool = False, exclude_defaults: bool = False, exclude_none: bool = False, encoder: Optional[Callable[[Any], Any]] = None, models_as_dict: bool = True, **dumps_kwargs: Any) → unicode\n",
-    "\n",
-    "        Generate a JSON representation of the model, include and exclude arguments as per dict().\n",
-    "\n",
-    "        encoder is an optional function to supply as default to json.dumps(), other arguments as per json.dumps().\n",
-    "\n",
-    "    classmethod lc_id() → List[str]\n",
-    "\n",
-    "        A unique identifier for this class for serialization purposes.\n",
-    "\n",
-    "        The unique identifier is a list of strings that describes the path to the object.\n",
-    "\n",
-    "    classmethod parse_file(path: Union[str, Path], *, content_type: unicode = None, encoding: unicode = 'utf8', proto: Protocol = None, allow_pickle: bool = False) → Model\n",
-    "\n",
-    "    classmethod parse_obj(obj: Any) → Model\n",
-    "\n",
-    "    classmethod parse_raw(b: Union[str, bytes], *, content_type: unicode = None, encoding: unicode = 'utf8', proto: Protocol = None, allow_pickle: bool = False) → Model\n",
-    "\n",
-    "    classmethod schema(by_alias: bool = True, ref_template: unicode = '#/definitions/{model}') → DictStrAny\n",
-    "\n",
-    "    classmethod schema_json(*, by_alias: bool = True, ref_template: unicode = '#/definitions/{model}', **dumps_kwargs: Any) → unicode\n",
-    "\n",
-    "    to_json() → Union[SerializedConstructor, SerializedNotImplemented]\n",
-    "\n",
-    "    to_json_not_implemented() → SerializedNotImplemented\n",
-    "\n",
-    "    classmethod update_forward_refs(**localns: Any) → None\n",
-    "\n",
-    "        Try to update ForwardRefs on fields based on this Model, globalns and localns.\n",
-    "\n",
-    "    classmethod validate(value: Any) → Model\n",
-    "\n",
-    "    property input_variables: List[str]\n",
-    "\n",
-    "        Input variables for this prompt template.\n",
-    "\n",
-    "        Returns\n",
-    "\n",
-    "            List of input variable names.\n",
-    "\n",
-    "    property lc_attributes: Dict\n",
-    "\n",
-    "        List of attribute names that should be included in the serialized kwargs.\n",
-    "\n",
-    "        These attributes must be accepted by the constructor.\n",
-    "\n",
-    "    property lc_secrets: Dict[str, str]\n",
-    "\n",
-    "        A map of constructor argument names to secret ids.\n",
-    "\n",
-    "        For example,\n",
-    "\n",
-    "            {“openai_api_key”: “OPENAI_API_KEY”}\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "langchain.prompts.chat.HumanMessagePromptTemplate\n",
     "\n",
-    "class langchain.prompts.chat.HumanMessagePromptTemplate[source]\n",
+    "class langchain.prompts.chat.HumanMessagePromptTemplate\n",
     "\n",
     "    Bases: BaseStringMessagePromptTemplate\n",
     "\n",
@@ -1008,7 +836,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These lines declare a flask app, define the api_key from the environment variable, and sets the chat window size for holding the chat history in a rolling memory window containing the last 20 chats."
+    "These lines declare a flask app, define the api_key from the environment variable, and sets the chat window size for holding the chat history in a rolling memory window containing the last 20 chats.\n",
+    "\n",
+    "The next section defines a LLM prompt template.  The template contains instructions for the bot followed by the chat history and the user's input for this turn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_template = \"\"\"\n",
+    "You are a helpful bot named Bob.\n",
+    "\n",
+    "Current conversation:\n",
+    "{history}\n",
+    "Human: {input}\n",
+    "AI Assistant:\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next section builds the prompts from the templates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_message_prompt = SystemMessagePromptTemplate.from_template(system_template)\n",
+    "\n",
+    "human_template=\"{input}\"\n",
+    "human_message_prompt = HumanMessagePromptTemplate.from_template(human_template)\n",
+    "\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([system_message_prompt, human_message_prompt])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next section initializes the chat bot and defines a conversation chain."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialize ChatOpenAI with the desired model\n",
+    "chat = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n",
+    "\n",
+    "# Initialize ConversationChain with the appropriate parameters\n",
+    "conversation = ConversationChain(\n",
+    "    llm=chat, \n",
+    "    prompt=chat_prompt, \n",
+    "    memory=ConversationBufferWindowMemory(k=AI_WINDOW_SIZE),\n",
+    "    verbose=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final section contains the routes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route('/')\n",
+    "def home():\n",
+    "    # Render the chat interface\n",
+    "    return render_template('chat.html')\n",
+    "\n",
+    "@app.route('/initiate_chat', methods=['GET'])\n",
+    "def initiate_chat():\n",
+    "    # Trigger initial AI response with empty user input\n",
+    "    response = conversation.predict(input=\"\")\n",
+    "    return jsonify({'reply': response})\n",
+    "\n",
+    "@app.route('/chat', methods=['POST'])\n",
+    "def chat():\n",
+    "    user_input = request.json['message']\n",
+    "    response = conversation.predict(input=user_input)\n",
+    "    return jsonify({'reply': response})\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By changing the system template, I can instruct the bot to behave in defferent ways, depending on the game state."
    ]
   }
  ],
