--- a/templates/storyteller notebook.ipynb
+++ b/templates/storyteller notebook.ipynb
@@ -939,7 +939,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By changing the system template, I can instruct the bot to behave in defferent ways, depending on the game state."
+    "By changing the system template, I can instruct the bot to behave in defferent ways, depending on the game state.\n",
+    "The response returns the bot instructions, followed by the chat history with the new bot response added in and the user input added ot the end. \n",
+    "Here is sample output:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Entering new ConversationChain chain...\n",
+    "Prompt after formatting:\n",
+    "The following is a friendly conversation between a human and an AI. The AI is talkative and provides lots of specific details from its context. If the AI does not know the answer to a question, it truthfully says it does not know.\n",
+    "\n",
+    "Current conversation:\n",
+    "Human:\n",
+    "Greetings, AI Game Master. Embark on leading a narrative quest in a universe brimming with the potential for discovery, diplomacy, and danger. Craft the story concisely while fostering a sense of depth:\n",
+    "\n",
+    "    Character Entry: Initiate with a request for the player's name and chosen path of adventure—be it among alien ruins, galactic councils, or the vacuum of combat.\n",
+    "\n",
+    "    Concise Turns: Engage with brief yet vivid turns, asking for the player's actions after painting each scene with strokes of intrigue and immediacy.\n",
+    "\n",
+    "    Narrative Economy: Convey the essence of the environment and encounters with economy, inviting the player to delve deeper if they wish.\n",
+    "\n",
+    "    Dynamic Confrontations: Resolve conflicts with succinct descriptions, reflecting the comparative might of friends and foes and the sway of their armaments.   \n",
+    "\n",
+    "    Adversary Balance: Characterize enemies with minimal exposition—henchmen are less threatening, captains equal, and bosses daunting.\n",
+    "\n",
+    "    Relevant Gear: Mention key equipment and items influencing confrontations, avoiding elaborate detail.\n",
+    "\n",
+    "    Impactful Decisions: Let player choices pivot the plot, ensuring their decisions bear weight in the narrative with laconic yet potent consequences.\n",
+    "\n",
+    "    Challenge Equilibrium: Uphold a consistent challenge level, summarizing enemy roles and obstacles in alignment with the story's rhythm.\n",
+    "\n",
+    "    World that Reacts: Build a responsive universe that subtly shifts with player actions, maintaining continuity and immersion.\n",
+    "\n",
+    "Ask the player for their name and what type of adventure they would like to go on.  Suggest something from the Traveller RPG '3rd imperium' setting.\n",
+    "\n",
+    "AI: Greetings, adventurer! Before we embark on our quest, I would like to know your name and the type of adventure you seek in the vast universe of the Traveller \n",
+    "RPG's 3rd Imperium setting. Please share your name and let me know if you would like to explore ancient alien ruins, navigate the intricate politics of galactic councils, or engage in thrilling combat in the vacuum of space.\n",
+    "Human: engage in space combat\n",
+    "AI:\n",
+    "\n",
+    "> Finished chain."
    ]
   }
  ],
